--- a/playground/4.component.html
+++ b/playground/4.component.html
@@ -24,6 +24,9 @@
     Vue.component('app-header', {
       template: '<h1>Header</h1>'
     });  
+    Vue.component('app-content', {
+      template: '<div>content</div>'
+    }); 
 
     new Vue({
       el: '#app',
